--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
     <link rel="stylesheet" href="./css/cust.css">
 
-    <title>СМС для пропуска</title>
+    <title>Генератор получения кода для цифрового пропуска по СМС</title>
   </head>
   <body>
   	<div class="dialog">
+
 	</div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
