--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="./css/cust.css">
 
-    <title>Генератор получения кода для цифрового пропуска по СМС</title>
+    <title>Пропуск по СМС</title>
   </head>
   <body>
   	<div class="dialog">
